Grease Pencil transformations show a help line with wrong origin #56279

Closed
opened 2018-08-08 22:28:29 +02:00 by Antonio Vazquez · 6 comments

To reproduce

  1. Open default scene
  2. Add gpencil blank object
  3. Enter in draw mode and draw 2 or 3 strokes
  4. Enter in edit mode and select points in several strokes
  5. Press R and rotate (use different pivot points)

The help line origin is wrong, but the center of rotation is right.

To reproduce 1) Open default scene 2) Add gpencil blank object 3) Enter in draw mode and draw 2 or 3 strokes 4) Enter in edit mode and select points in several strokes 5) Press R and rotate (use different pivot points) The help line origin is wrong, but the center of rotation is right.
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Joshua Leung was assigned by Antonio Vazquez 2018-08-08 22:30:52 +02:00
Author
Member

Added subscribers: @mendio, @JoshuaLeung

Added subscribers: @mendio, @JoshuaLeung
Author
Member

@JoshuaLeung I fixed this in the past, but you removed the code, so I don't know how fix it now because I don't know enough how transform center help line works.

This fix is urgent because @mendio is waiting to record the training videos.

@JoshuaLeung I fixed this in the past, but you removed the code, so I don't know how fix it now because I don't know enough how transform center help line works. This fix is urgent because @mendio is waiting to record the training videos.
Antonio Vazquez changed title from Grease Pencil rotation shows a help line with wrong origin to Grease Pencil transformations show a help line with wrong origin 2018-08-08 22:31:24 +02:00
Joshua Leung was unassigned by Antonio Vazquez 2018-08-09 16:09:57 +02:00
Antonio Vazquez self-assigned this 2018-08-09 16:09:57 +02:00
Author
Member

Steal the task

Steal the task

This issue was referenced by 85cac2221c

This issue was referenced by 85cac2221c543e67a9070c94d89d61bf27c7190f
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56279
No description provided.