Fix T56279: Grease Pencil transformations show a help line with wrong origin

As grease pencil use multiedit frames instead of multiobject edit, this fix solves the issue.

In the future maybe will need modifications if we add multiobject support, but we need a solution now.